Current development:
  * Added comments
  * Fixed mistakes in SKIP page

Version 1.1:
   * Added SKIP codes
   * Added option to save search results

Version 1.0:
   * Initial release